Added  -- --browsers=ChromeHeadless arguments passing and removed comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,11 @@ on:
 jobs:
     test-and-build:
         runs-on: ubuntu-latest
-
         defaults:
             run:
                 working-directory: angular
 
         steps:
-            # Bonus: STEAP 1 - Record time of job forund here - https://stackoverflow.com/a/72175840
-            # - name: Set start timestamp
-            #   id: start
-            #   run: |
-            #       printf 'timestamp=%(%s)T\n' >> "$GITHUB_OUTPUT"
-
             - name: Checkout code
               uses: actions/checkout@v2
 
@@ -36,22 +29,16 @@ jobs:
               run: npm run lint
 
             - name: Run tests
-              # No need for "continue-on-error: false" as it is Github Actions default
-              run: npm run coverage # "1.0.4" - npm run coverage would open browser so added "browsers": "ChromeHeadless" TO angular.json
+              run: npm run coverage -- --browsers=ChromeHeadless
 
             - name: Build
               if: success()
               run: npm run build
 
-            # Github Packages explanation https://youtu.be/t3xRLAA_Y7Y
-            # Example of docker/setup-buildx-action https://dev.to/ken_mwaura1/automate-docker-image-builds-and-push-to-github-registry-using-github-actions-4h20
-
-            # Set up Docker Buildx
             - name: Set up Docker Buildx
               if: success()
               uses: docker/setup-buildx-action@v3
 
-            # Log in to GitHub Container Registry
             - name: Log in to GitHub Container Registry
               if: success()
               uses: docker/login-action@v3
@@ -60,27 +47,14 @@ jobs:
                   username: ${{ github.actor }}
                   password: ${{ secrets.GHUB_TOKEN }}
 
-            # Got from https://cicube.io/workflow-hub/docker-build-push-action/#how-to-push-docker-images-to-github-container-registry-with-github-actions .
             - name: Build and push Docker image
               if: success()
               uses: docker/build-push-action@v2
               with:
                   context: .
                   push: true
-                  # Error: buildx failed with: ERROR: invalid tag "ghcr.io/Amexei/angular-react-starter:latest": repository name must be lowercase
-                  # Can't use github.repository as it's in uppercase my name Amexei
-                  #
-                  # Have to manually attach package to repository so it is visible inside repo https://stackoverflow.com/questions/73485013/github-package-successfully-published-but-not-showing-up-in-packages-section
                   tags: ghcr.io/${{ secrets.GHUB_REPOSITORY }}:lastest
 
-            # Bonus: STEP 2 - Record time of job forund here - https://stackoverflow.com/a/72175840
-            # - name: Set start timestamp
-            #   id: duration
-            #   run: |
-            #       printf -v now '%(%s)T'
-            #       duration=$((now - ${{ steps.start.outputs.timestamp }}))
-
-            # Bonus calucate time Much easier solution - https://github.com/marketplace/actions/github-workflow-duration-calculator
             - name: Calculate Steps Log Time
               if: always()
               id: duration
@@ -92,9 +66,6 @@ jobs:
               run: |
                   echo "Calculated Time: ${{ steps.duration.outputs.duration }}"
 
-            # If failure of success - https://stackoverflow.com/a/58859404
-            # Got an exanole from - https://github.com/go-gitea/gitea/issues/23725#issuecomment-1691883600
-            # Requires APP_PASSWORD from gmail https://stackoverflow.com/a/70929145
             - name: Send success email
               if: success()
               uses: dawidd6/action-send-mail@v3
