--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
 
             - name: Parse Node.js version and Pass it as an environment variable
               uses: svierk/get-node-version@v1.2.0
               with:
-                  path: ./angular
+                  path: ./angular/
 
             - name: Install packages
               run: npm install
