Using npm ci | Using 8080 local port in docker-compose.yaml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
                   node-version: ${{ env.VERSION }}
 
             - name: Install packages
-              run: npm install
+              run: npm ci
 
             - name: Lint code
               run: npm run lint
