--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,8 @@ server {
   root /usr/share/nginx/html;
 
   location / {
-    try_files $uri $uri/ /index.html =404;
+    index index.html;
   }
 }
+
+
