--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,23 +37,19 @@ jobs:
               run: npm run coverage -- --browsers=ChromeHeadless
 
             - name: Build
-              if: success()
               run: npm run build
 
             - name: Set up Docker Buildx
-              if: success()
               uses: docker/setup-buildx-action@v3
 
             - name: Log in to GitHub Container Registry
-              if: success()
               uses: docker/login-action@v3
               with:
                   registry: ghcr.io
                   username: ${{ github.actor }}
-                  password: ${{ secrets.GHUB_TOKEN }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Build and push Docker image
-              if: success()
               uses: docker/build-push-action@v2
               with:
                   context: .
@@ -65,7 +61,7 @@ jobs:
               id: duration
               uses: RockyIsHere/actions-calculate-log-time@v0.2.4
               env:
-                  GITHUB_TOKEN: ${{ secrets.GHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Print Calculated Time
               run: |
