--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
               with:
                   registry: ghcr.io
                   username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
+                  password: ${{ github.token }}
 
             - name: Build and push Docker image
               uses: docker/build-push-action@v2
@@ -61,7 +61,7 @@ jobs:
               id: duration
               uses: RockyIsHere/actions-calculate-log-time@v0.2.4
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ github.token }}
 
             - name: Print Calculated Time
               run: |
