--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
         branches:
             - master
             - ci-feature
+
 permissions:
     contents: read
     packages: write
@@ -13,6 +14,8 @@ permissions:
 jobs:
     test-and-build:
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
         defaults:
             run:
                 working-directory: angular
@@ -51,7 +54,7 @@ jobs:
               with:
                   registry: ghcr.io
                   username: ${{ github.actor }}
-                  password: ${{ github.token }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Build and push Docker image
               uses: docker/build-push-action@v2
