--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,43 +39,43 @@ jobs:
             - name: Build
               run: npm run build
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+            # - name: Set up Docker Buildx
+            #   uses: docker/setup-buildx-action@v3
 
-            - name: Log in to GitHub Container Registry
-              uses: docker/login-action@v3
-              with:
-                  registry: ghcr.io
-                  username: ${{ github.actor }}
-                  password: ${{ github.token }}
+            # - name: Log in to GitHub Container Registry
+            #   uses: docker/login-action@v3
+            #   with:
+            #       registry: ghcr.io
+            #       username: ${{ github.actor }}
+            #       password: ${{ github.token }}
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v2
-              with:
-                  context: .
-                  push: true
-                  tags: ghcr.io/${{ secrets.GHUB_REPOSITORY }}:lastest
+            # - name: Build and push Docker image
+            #   uses: docker/build-push-action@v2
+            #   with:
+            #       context: .
+            #       push: true
+            #       tags: ghcr.io/${{ secrets.GHUB_REPOSITORY }}:lastest
 
-            - name: Calculate Steps Log Time
+            # - name: Calculate Steps Log Time
+            #   if: always()
+            #   id: duration
+            #   uses: RockyIsHere/actions-calculate-log-time@v0.2.4
+            #   env:
+            #       GITHUB_TOKEN: ${{ github.token }}
+
+            # - name: Print Calculated Time
+            #   run: |
+            #       echo "Calculated Time: ${{ steps.duration.outputs.duration }}"
+
+            - name: Send email notification on workflow status
               if: always()
-              id: duration
-              uses: RockyIsHere/actions-calculate-log-time@v0.2.4
-              env:
-                  GITHUB_TOKEN: ${{ github.token }}
-
-            - name: Print Calculated Time
-              run: |
-                  echo "Calculated Time: ${{ steps.duration.outputs.duration }}"
-
-            - name: Send success email
-              if: success()
               uses: dawidd6/action-send-mail@v3
               with:
                   server_address: smtp.gmail.com
                   server_port: 587
                   username: ${{ secrets.SMTP_USERNAME }}
                   password: ${{ secrets.SMTP_PASSWORD }}
-                  subject: ${{ github.repository }} ${{ github.workflow }} Success
+                  subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
                   priority: high
                   to: ${{ secrets.MAIL_TO }}
                   from: ${{ secrets.MAIL_FROM }}
@@ -87,22 +87,22 @@ jobs:
 
                       ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
 
-            - name: Send failure email
-              if: failure()
-              uses: dawidd6/action-send-mail@v3
-              with:
-                  server_address: smtp.gmail.com
-                  server_port: 587
-                  username: ${{ secrets.SMTP_USERNAME }}
-                  password: ${{ secrets.SMTP_PASSWORD }}
-                  subject: ${{ github.repository }} ${{github.workflow}} ${{ job.status }}
-                  priority: high
-                  to: ${{ secrets.MAIL_TO }}
-                  from: ${{ secrets.MAIL_FROM }}
-                  convert_markdown: true
-                  html_body: |
-                      ### testing-code ${{ job.status }}
+            # - name: Send failure email
+            #   if: failure()
+            #   uses: dawidd6/action-send-mail@v3
+            #   with:
+            #       server_address: smtp.gmail.com
+            #       server_port: 587
+            #       username: ${{ secrets.SMTP_USERNAME }}
+            #       password: ${{ secrets.SMTP_PASSWORD }}
+            #       subject: ${{ github.repository }} ${{github.workflow}} ${{ job.status }}
+            #       priority: high
+            #       to: ${{ secrets.MAIL_TO }}
+            #       from: ${{ secrets.MAIL_FROM }}
+            #       convert_markdown: true
+            #       html_body: |
+            #           ### testing-code ${{ job.status }}
 
-                      *Duration*: ${{ steps.duration.outputs.duration }}
+            #           *Duration*: ${{ steps.duration.outputs.duration }}
 
-                      ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
+            #           ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
