--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
             - name: Build
               run: npm run build
 
-            fail
+            - name: Fail job on purpose
+              run: exit 1
 
             # - name: Set up Docker Buildx
             #   uses: docker/setup-buildx-action@v3
