--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,29 @@ on:
             - master
             - ci-feature
 
+    workflow_dispatch:
+        inputs:
+            registry:
+                description: Remote registry to push the Docker image to
+                default: ghcr.io
+                required: true
+                type: string
+            tag:
+                description: Tag to use for the Docker image for the remote registry
+                default: latest
+                required: true
+                type: string
+            smtp_address:
+                description: SMTP server to send email notifications
+                default: smtp.gmail.com
+                required: true
+                type: string
+            smtp_port:
+                description: SMTP server port
+                default: 587
+                required: true
+                type: number
+
 jobs:
     test-and-build:
         runs-on: ubuntu-latest
@@ -39,43 +62,40 @@ jobs:
             - name: Build
               run: npm run build
 
-            - name: Fail job on purpose
-              run: exit 1
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
 
-            # - name: Set up Docker Buildx
-            #   uses: docker/setup-buildx-action@v3
+            - name: Log in to GitHub Container Registry
+              uses: docker/login-action@v3
+              with:
+                  registry: ${{ github.event.inputs.registry }}
+                  username: ${{ github.actor }}
+                  password: ${{ github.token }}
 
-            # - name: Log in to GitHub Container Registry
-            #   uses: docker/login-action@v3
-            #   with:
-            #       registry: ghcr.io
-            #       username: ${{ github.actor }}
-            #       password: ${{ github.token }}
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v2
+              with:
+                  context: .
+                  push: true
+                  tags: ${{ github.event.inputs.registry }}/${{ secrets.GHUB_REPOSITORY }}:${{ github.event.inputs.tag }}
 
-            # - name: Build and push Docker image
-            #   uses: docker/build-push-action@v2
-            #   with:
-            #       context: .
-            #       push: true
-            #       tags: ghcr.io/${{ secrets.GHUB_REPOSITORY }}:lastest
+            - name: Calculate Steps Log Time
+              if: always()
+              id: duration
+              uses: RockyIsHere/actions-calculate-log-time@v0.2.4
+              env:
+                  GITHUB_TOKEN: ${{ github.token }}
 
-            # - name: Calculate Steps Log Time
-            #   if: always()
-            #   id: duration
-            #   uses: RockyIsHere/actions-calculate-log-time@v0.2.4
-            #   env:
-            #       GITHUB_TOKEN: ${{ github.token }}
-
-            # - name: Print Calculated Time
-            #   run: |
-            #       echo "Calculated Time: ${{ steps.duration.outputs.duration }}"
+            - name: Print Calculated Time
+              run: |
+                  echo "Calculated Time: ${{ steps.duration.outputs.duration }}"
 
             - name: Send email notification on workflow status
               if: always()
               uses: dawidd6/action-send-mail@v3
               with:
-                  server_address: smtp.gmail.com
-                  server_port: 587
+                  server_address: ${{ github.event.inputs.smtp_address }}
+                  server_port: ${{ github.event.inputs.smtp_port }}
                   username: ${{ secrets.SMTP_USERNAME }}
                   password: ${{ secrets.SMTP_PASSWORD }}
                   subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
@@ -89,23 +109,3 @@ jobs:
                       *Duration*: ${{ steps.duration.outputs.duration }}
 
                       ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
-
-            # - name: Send failure email
-            #   if: failure()
-            #   uses: dawidd6/action-send-mail@v3
-            #   with:
-            #       server_address: smtp.gmail.com
-            #       server_port: 587
-            #       username: ${{ secrets.SMTP_USERNAME }}
-            #       password: ${{ secrets.SMTP_PASSWORD }}
-            #       subject: ${{ github.repository }} ${{github.workflow}} ${{ job.status }}
-            #       priority: high
-            #       to: ${{ secrets.MAIL_TO }}
-            #       from: ${{ secrets.MAIL_FROM }}
-            #       convert_markdown: true
-            #       html_body: |
-            #           ### testing-code ${{ job.status }}
-
-            #           *Duration*: ${{ steps.duration.outputs.duration }}
-
-            #           ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
