--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
     web:
-        image: "ghcr.io/amexei/angular-react-starter:lastest"
+        image: "ghcr.io/amexei/angular-react-starter:latest"
         ports:
             - "8080:80"
