--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
             - name: Log in to GitHub Container Registry
               uses: docker/login-action@v3
               with:
-                  registry: ${{ github.event.inputs.registry }}
+                  registry: ${{ inputs.registry }}
                   username: ${{ github.actor }}
                   password: ${{ github.token }}
 
@@ -77,7 +77,7 @@ jobs:
               with:
                   context: .
                   push: true
-                  tags: ${{ github.event.inputs.registry }}/${{ secrets.GHUB_REPOSITORY }}:${{ github.event.inputs.tag }}
+                  tags: ${{ inputs.registry }}/${{ secrets.GHUB_REPOSITORY }}:${{ inputs.tag }}
 
             - name: Calculate Steps Log Time
               if: always()
@@ -94,8 +94,8 @@ jobs:
               if: always()
               uses: dawidd6/action-send-mail@v3
               with:
-                  server_address: ${{ github.event.inputs.smtp_address }}
-                  server_port: ${{ github.event.inputs.smtp_port }}
+                  server_address: ${{ inputs.smtp_address }}
+                  server_port: ${{ inputs.smtp_port }}
                   username: ${{ secrets.SMTP_USERNAME }}
                   password: ${{ secrets.SMTP_PASSWORD }}
                   subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
