--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ env.VERSION }}
+                  node-version-file: package.json
+                  # node-version: ${{ env.VERSION }}
 
             - name: Install packages
               run: npm ci
