fix or prev commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version-file: package.json
+                  node-version-file: angular/package.json
                   # node-version: ${{ env.VERSION }}
 
             - name: Install packages
