--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,16 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
-            - name: Parse Node.js version from package-lock.json
-              run: |
-                  VERSION=$(jq -r '.version' package.json)
-                  echo "VERSION=^$VERSION" >> $GITHUB_ENV
+            # - name: Parse Node.js version from package-lock.json
+            #   run: |
+            #       VERSION=$(jq -r '.version' package.json)
+            #       echo "VERSION=^$VERSION" >> $GITHUB_ENV
 
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ env.VERSION }}
+                  node-version-file: angular/package-lock.json
+                  # node-version: ${{ env.VERSION }}
 
             - name: Install packages
               run: npm ci
