--- a/.github/workflows/send-mail.yml
+++ b/.github/workflows/send-mail.yml
@@ -42,6 +42,13 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v4
 
+            - name: Calculate Steps Log Time
+              if: always()
+              id: duration
+              uses: RockyIsHere/actions-calculate-log-time@v0.2.4
+              env:
+                  GITHUB_TOKEN: ${{ github.token }}
+
             - name: Send email notification on workflow status
               if: always()
               uses: dawidd6/action-send-mail@v3
