--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -29,7 +29,7 @@ jobs:
               uses: actions/download-artifact@v3
               with:
                   name: angular-dist
-                  path: dist/angular-starter
+                  path: angular/dist/angular-starter
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
