--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                   name: angular-dist
-                  path: dist/angular-starter
+                  path: angular/dist/angular-starter
 
     build-push-docker:
         needs: test-and-build
