--- a/.github/workflows/reusable-upload-package.yml
+++ b/.github/workflows/reusable-upload-package.yml
@@ -31,12 +31,13 @@ on:
                 default: amexei/angular-react-starter
                 required: false
                 type: string
-
         secrets:
-            smptp_username:
-                description: SMTP username
-            smptp_password:
-                description: SMTP password
+            smtp_username:
+                description: "SMTP username"
+                required: true
+            smtp_password:
+                description: "SMTP password"
+                required: true
 
 jobs:
     test-build-publish:
