--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -3,8 +3,11 @@ name: CI Pipeline
 on:
     push:
         branches:
-            - main
             - ci-feature
+
+    pull_request:
+        branches:
+            - master
 
 jobs:
     commit-trigger:
