wf on pr open and push 2 branches

--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -4,10 +4,12 @@ on:
     push:
         branches:
             - ci-feature
+            - master
 
     pull_request:
         branches:
             - master
+        types: opened
 
 jobs:
     commit-trigger:
