--- a/.github/workflows/reusable-upload-package.yml
+++ b/.github/workflows/reusable-upload-package.yml
@@ -1,123 +1,107 @@
+---
 name: CI Pipeline
-
 on:
-    workflow_call:
-        inputs:
-            registry:
-                description: Remote registry to push the Docker image to
-                default: ghcr.io
-                required: false
-                type: string
-            smtp_address:
-                description: SMTP server to send email notifications
-                default: smtp.gmail.com
-                required: false
-                type: string
-            smtp_port:
-                description: SMTP server port
-                default: 587
-                required: false
-                type: number
-            mail_to:
-                description: Email address to send notifications to
-                required: true
-                type: string
-            mail_from:
-                description: Email address to send notifications from
-                required: true
-                type: string
-            ghub_repository:
-                description: GitHub Repository link with lowercase
-                default: amexei/angular-react-starter
-                required: false
-                type: string
-        secrets:
-            smtp_username:
-                description: "SMTP username"
-                required: true
-            smtp_password:
-                description: "SMTP password"
-                required: true
-
+  workflow_call:
+    inputs:
+      registry:
+        description: Remote registry to push the Docker image to
+        default: ghcr.io
+        required: false
+        type: string
+      smtp_address:
+        description: SMTP server to send email notifications
+        default: smtp.gmail.com
+        required: false
+        type: string
+      smtp_port:
+        description: SMTP server port
+        default: 587
+        required: false
+        type: number
+      mail_to:
+        description: Email address to send notifications to
+        required: true
+        type: string
+      mail_from:
+        description: Email address to send notifications from
+        required: true
+        type: string
+      ghub_repository:
+        description: GitHub Repository link with lowercase
+        default: amexei/angular-react-starter
+        required: false
+        type: string
+    secrets:
+      smtp_username:
+        description: SMTP username
+        required: true
+      smtp_password:
+        description: SMTP password
+        required: true
 jobs:
-    test-build-publish:
-        runs-on: ubuntu-latest
-        defaults:
-            run:
-                working-directory: angular
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Parse Node.js version from package-lock.json
-              run: |
-                  VERSION=$(jq -r '.version' package.json)
-                  echo "VERSION=^$VERSION" >> $GITHUB_ENV
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ env.VERSION }}
-
-            - name: Install packages
-              run: npm ci
-
-            - name: Lint code
-              run: npm run lint
-
-            - name: Run tests
-              run: npm run coverage -- --browsers=ChromeHeadless
-
-            - name: Build
-              run: npm run build
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Log in to GitHub Container Registry
-              uses: docker/login-action@v3
-              with:
-                  registry: ${{ inputs.registry }}
-                  username: ${{ github.actor }}
-                  password: ${{ github.token }}
-
-            - name: Preparing Docker tags
-              id: meta
-              uses: docker/metadata-action@v4
-              with:
-                  images: ${{ inputs.registry }}/${{ inputs.ghub_repository }}
-
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v2
-              with:
-                  context: .
-                  push: true
-                  tags: ${{ steps.meta.outputs.tags }}
-
-            - name: Calculate Steps Log Time
-              if: always()
-              id: duration
-              uses: RockyIsHere/actions-calculate-log-time@v0.2.4
-              env:
-                  GITHUB_TOKEN: ${{ github.token }}
-
-            - name: Send email notification on workflow status
-              if: always()
-              uses: dawidd6/action-send-mail@v3
-              with:
-                  server_address: ${{ inputs.smtp_address }}
-                  server_port: ${{ inputs.smtp_port }}
-                  username: ${{ secrets.smtp_username }}
-                  password: ${{ secrets.smtp_password }}
-                  subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
-                  priority: high
-                  to: ${{ inputs.mail_to }}
-                  from: ${{ inputs.mail_from }}
-                  convert_markdown: true
-                  html_body: |
-                      ### testing-code ${{ job.status }}
-
-                      *Duration*: ${{ steps.duration.outputs.duration }}
-
-                      ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: angular
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Parse Node.js version from package-lock.json
+        run: |
+          VERSION=$(jq -r '.version' package.json)
+          echo "VERSION=^$VERSION" >> $GITHUB_ENV
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.VERSION }}
+      - name: Install packages
+        run: npm ci
+      - name: Lint code
+        run: npm run lint
+      - name: Run tests
+        run: npm run coverage -- --browsers=ChromeHeadless
+      - name: Build
+        run: npm run build
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ inputs.registry }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+      - name: Preparing Docker tags
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ inputs.registry }}/${{ inputs.ghub_repository }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+      - name: Calculate Steps Log Time
+        if: always()
+        id: duration
+        uses: RockyIsHere/actions-calculate-log-time@v0.2.4
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      - name: Send email notification on workflow status
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: ${{ inputs.smtp_address }}
+          server_port: ${{ inputs.smtp_port }}
+          username: ${{ secrets.smtp_username }}
+          password: ${{ secrets.smtp_password }}
+          subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
+          priority: high
+          to: ${{ inputs.mail_to }}
+          from: ${{ inputs.mail_from }}
+          convert_markdown: true
+          html_body: |-
+            ### testing-code ${{ job.status }}
+            *Duration*: ${{ steps.duration.outputs.duration }}
+            ${{ github.repository }}: [${{ github.ref }}@${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/actions)
