--- a/angular/package.json
+++ b/angular/package.json
@@ -41,5 +41,8 @@
     "karma-jasmine-html-reporter": "2.1.0",
     "typescript": "5.5.4",
     "typescript-eslint": "8.2.0"
+  },
+  "engines": {
+    "node": ">=18.19.1"
   }
 }
