changed mail_to and mail_from from inputs to secrets | changed file name to a more semantic one

--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -8,14 +8,14 @@ on:
     types: opened
 jobs:
   push-trigger:
-    uses: ./.github/workflows/reusable-upload-package.yml
+    uses: ./.github/workflows/package-release.yml
     with:
       registry: ghcr.io
       smtp_address: smtp.gmail.com
       smtp_port: 587
-      mail_to: aleksei.melinic@gmail.com
-      mail_from: aleksei.melinic@gmail.com
       ghub_repository: amexei/angular-react-starter
     secrets:
       smtp_username: ${{ secrets.SMTP_USERNAME }}
       smtp_password: ${{ secrets.SMTP_PASSWORD }}
+      mail_to: ${{ secrets.MAIL_TO }}
+      mail_from: ${{ secrets.MAIL_FROM }}
