--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -18,14 +18,6 @@ on:
         default: 587
         required: false
         type: number
-      mail_to:
-        description: Email address to send notifications to
-        required: true
-        type: string
-      mail_from:
-        description: Email address to send notifications from
-        required: true
-        type: string
       ghub_repository:
         description: GitHub Repository link with lowercase
         default: amexei/angular-react-starter
@@ -37,6 +29,12 @@ on:
         required: true
       smtp_password:
         description: SMTP password
+        required: true
+      mail_to:
+        description: Email address to send notifications to
+        required: true
+      mail_from:
+        description: Email address to send notifications from
         required: true
 jobs:
   build:
@@ -94,8 +92,8 @@ jobs:
           password: ${{ secrets.smtp_password }}
           subject: ${{ github.repository }} ${{ github.workflow }} ${{ job.status }}
           priority: high
-          to: ${{ inputs.mail_to }}
-          from: ${{ inputs.mail_from }}
+          to: ${{ secrets.mail_to }}
+          from: ${{ secrets.mail_from }}
           convert_markdown: true
           html_body: |-
             ### testing-code ${{ job.status }}
