added sequence_style = "block_style" | renamed to config.yamlfix.toml

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -3,9 +3,13 @@ name: build-pipeline
 
 on:
   push:
-    branches: [ci-feature, master]
+    branches:
+      - ci-feature
+      - master
+
   pull_request:
-    branches: [master]
+    branches:
+      - master
     types: opened
 
 jobs:
