CI workflow to create Github Docker Package after Successfull tests on commit (#2)
* test run

* test 2

* v3

* Added CI pipeline to publish docker package

* Specified default working-directory for ci.yml

* Added  -- --browsers=ChromeHeadless arguments passing and removed comments

* Found Get Node Version on Github Marketplace

It searches for appropriate node version and installs it

* adding path input

* v3

* Parsing node version from package-lock.json

* Using npm ci | Using 8080 local port in docker-compose.yaml

* Using static path in NGINX | Removed name from docker-compose

* Removed excessive if success()) | Using native GITHUB_TOKEN

* v2 github.token

* adding permissions

* V3

* v4 added repo package write permission

* Using `if: always()` to send mail

* test fail

* fail v2

* Added workflow inputs | changes mistaked name `lastests` to latest

* inputs v2

* dispatch changed to call

* workflow_dispach?

* Addidng metadata-action

* using ci-feature tag in docker-compose

* Changed required from true to false as defaults are present on inputs. Removed tag input as loading it now from metadata-action

* Getting node version from package.json

* fix to prevous commit

* added ^

* Put native `angular.json` as prettier formatted it

* trying node-version-file

* fix or prev commit

* Removed not required print of duration | Using mail_to and mail_from as required inputs

* Using internal container port 8080 instead of 80

* trying angular/package-lock.json for node-version-file

* Using `main.yml` and `build-push-docker.yml` + `send-mail.yml`  -  test run

* test reusable workflow run 2

* v3

* v4

* v5

* v6

* v7 build artifacts as they are not present from previous job

* v8 path changed

* trigger vorkflow

* v2

* v3

* push and pull requiest

* wf on pr open and push 2 branches

* Using official nginx unpriveleged + easier nginx.conf to read


--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,9 @@
 {
   "name": "angular-starter",
   "version": "18.2.1",
+  "engines": {
+    "node": ">=18.19.1"
+  },
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --port 4200",
