Added `pre-commit` with `yamllint` && `yamlfix` + usage of `git-crypt`
Squashed + Added `git-crypto` and remaining `pre-commit-hooks` to `pre-config` library

Telling git-crypt to encrypt secrets.yaml

test git-crypt unlock

v2

v3

v4

v5

v6

testing if variables are passing between jobs

v2 `using outputs`

v3

reading secrects from `secrets.yaml`

v2

v3 added `needs: get-secrets`

Changed `SMTP_PASSWORD` as leaked it in previous runs

test commit to check `pre-commit`

test run

Properly specified path of files fo check for `yamllint` and 'yamlfix'

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 ---
 services:
   web:
-    image: ghcr.io/amexei/angular-react-starter:ci-feature
+    image: ghcr.io/amexei/angular-react-starter:feature/pre-commit
     ports:
       - 8080:8080
