--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -4,8 +4,8 @@ name: build-pipeline
 on:
   push:
     branches:
-      - ci-feature
       - master
+      - feature/pre-commit
 
   pull_request:
     branches:
@@ -13,15 +13,48 @@ on:
     types: opened
 
 jobs:
+  get-secrets:
+    name: Get secrets
+    runs-on: ubuntu-latest
+    outputs:  # guide https://adamcowley.co.uk/posts/til-github-action-output-parameters/
+      MAIL_FROM: ${{ steps.read_secrets.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ steps.read_secrets.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
+    steps:
+      - uses: actions/checkout@master
+      - name: print secrets.yaml
+        run: cat ./secrets.yaml
+      - name: git_GIT_CRYPT_KEY
+        run: echo $GIT_CRYPT_KEY
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+      - name: Read and assigns variables from secrets.yaml
+        id: read_secrets
+        run: |
+          MAIL_FROM=$(cat secrets.yaml | grep MAIL_FROM | cut -d '"' -f 2)
+          MAIL_TO=$(cat secrets.yaml | grep MAIL_TO | cut -d '"' -f 2)
+          SMTP_USERNAME=$(cat secrets.yaml | grep SMTP_USERNAME | cut -d '"' -f 2)
+          SMTP_PASSWORD=$(cat secrets.yaml | grep SMTP_PASSWORD | cut -d '"' -f 2)
+          echo "MAIL_FROM=$MAIL_FROM" >> "$GITHUB_OUTPUT"
+          echo "MAIL_TO=$MAIL_TO" >> "$GITHUB_OUTPUT"
+          echo "SMTP_USERNAME=$SMTP_USERNAME" >> "$GITHUB_OUTPUT"
+          echo "SMTP_PASSWORD=$SMTP_PASSWORD" >> "$GITHUB_OUTPUT"
+      - name: print hello
+        run: echo "Hello World"
+
   push-trigger:
+    needs: get-secrets
     uses: ./.github/workflows/build-workflow.yml
     with:
-      ghub_repository: amexei/angular-react-starter
+      ghub_repository: aleksei-melinic/angular-react-starter
       registry: ghcr.io
       smtp_address: smtp.gmail.com
       smtp_port: 587
     secrets:
-      mail_from: ${{ secrets.MAIL_FROM }}
-      mail_to: ${{ secrets.MAIL_TO }}
-      smtp_password: ${{ secrets.SMTP_PASSWORD }}
-      smtp_username: ${{ secrets.SMTP_USERNAME }}
+      MAIL_FROM: ${{ needs.get-secrets.outputs.MAIL_FROM }}
+      MAIL_TO: ${{ needs.get-secrets.outputs.MAIL_TO }}
+      SMTP_USERNAME: ${{ needs.get-secrets.outputs.SMTP_USERNAME }}
+      SMTP_PASSWORD: ${{ needs.get-secrets.outputs.SMTP_PASSWORD }}
