--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -22,15 +22,14 @@ jobs:
       SMTP_USERNAME: ${{ steps.read_secrets.outputs.SMTP_USERNAME }}
       SMTP_PASSWORD: ${{ steps.read_secrets.outputs.SMTP_PASSWORD }}
     steps:
-      - uses: actions/checkout@master
-      - name: print secrets.yaml
-        run: cat ./secrets.yaml
-      - name: git_GIT_CRYPT_KEY
-        run: echo $GIT_CRYPT_KEY
+      - name: Checkout code
+        uses: actions/checkout@master
+
       - name: Unlock secrets
         uses: sliteteam/github-action-git-crypt-unlock@1.3.0  # https://github.com/sliteteam/github-action-git-crypt-unlock/releases/tag/1.3.0
         env:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+
       - name: Read and assigns variables from secrets.yaml
         id: read_secrets
         run: |
@@ -42,8 +41,6 @@ jobs:
           echo "MAIL_TO=$MAIL_TO" >> "$GITHUB_OUTPUT"
           echo "SMTP_USERNAME=$SMTP_USERNAME" >> "$GITHUB_OUTPUT"
           echo "SMTP_PASSWORD=$SMTP_PASSWORD" >> "$GITHUB_OUTPUT"
-      - name: print hello
-        run: echo "Hello World"
 
   push-trigger:
     needs: get-secrets
