--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -100,6 +100,8 @@ jobs:
         if: always()
         id: duration
         uses: RockyIsHere/actions-calculate-log-time@v0.2.4
+        with:
+          start_time: ${{ github.event.workflow_run.created_at }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
