--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -22,12 +22,6 @@ on:
         required: false
         type: number
 
-      ghub_repository:
-        description: GitHub Repository link with lowercase
-        default: amexei/angular-react-starter
-        required: false
-        type: string
-
     secrets:
       smtp_username:
         description: SMTP username
@@ -87,7 +81,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ inputs.registry }}/${{ inputs.ghub_repository }}
+          images: ${{ inputs.registry }}/${{ github.repository }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
