--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -33,14 +33,15 @@ jobs:
       - name: Read and assigns variables from secrets.yaml
         id: read_secrets
         run: |
-          MAIL_FROM=$(cat secrets.yaml | grep MAIL_FROM | cut -d '"' -f 2)
-          MAIL_TO=$(cat secrets.yaml | grep MAIL_TO | cut -d '"' -f 2)
-          SMTP_USERNAME=$(cat secrets.yaml | grep SMTP_USERNAME | cut -d '"' -f 2)
-          SMTP_PASSWORD=$(cat secrets.yaml | grep SMTP_PASSWORD | cut -d '"' -f 2)
-          echo "MAIL_FROM=$MAIL_FROM" >> "$GITHUB_OUTPUT"
-          echo "MAIL_TO=$MAIL_TO" >> "$GITHUB_OUTPUT"
-          echo "SMTP_USERNAME=$SMTP_USERNAME" >> "$GITHUB_OUTPUT"
-          echo "SMTP_PASSWORD=$SMTP_PASSWORD" >> "$GITHUB_OUTPUT"
+          while read KEY_VAL;
+          do
+
+              key=$(echo "$KEY_VAL" | cut -d ':' -f 1)
+              value=$(echo "$KEY_VAL" | cut -d '"' -f 2)
+              # echo "$key";
+              echo "$key=$value" >> "$GITHUB_OUTPUT"
+
+          done < ./secrets.yaml
 
   push-trigger:
     needs: get-secrets
