--- a/.github/workflows/read-secrets.yml
+++ b/.github/workflows/read-secrets.yml
@@ -39,4 +39,4 @@ jobs:
               # echo "$key";
               echo "$key=$value" >> "$GITHUB_OUTPUT"
 
-          done < ./secrets.yaml
+          done < ${{inputs.secrets_path}}
